--- a/requirements.txt
+++ b/requirements.txt
@@ -3,17 +3,16 @@ google-generativeai
 chromadb
 sentence-transformers
 transformers
-tf-keras
 Pillow
 PyMuPDF
 numpy
 cloudconvert
 torch
 requests
-tensorflow
 pandas
 matplotlib
 seaborn
 scikit-learn
 tensorflow-cpu
 h5py
+pysqlite3-binary
